@@ -49,7 +49,7 @@ function(){
 <div id="compat" style="display:none" class="text_info"><?php echo __('ERROR_COMPAT_BROWSER'); ?></div>
 <br />
 <?php if($wizard) { ?>
-    <div class="text_info"><?php echo __('WELCOME_TUTO'); ?><?php echo __('WELCOME_REQUIEREMENT'); ?></div>
+    <div class="text_info"><?php echo __('WELCOME_TUTO'); ?>:<br /><br /><?php echo __('WELCOME_REQUIEREMENT'); ?></div>
     <p class="p_center"><?php echo __('WELCOME_FOLLOW_LINK'); ?>:</p>
 <form action="<?php echo($_SERVER['PHP_SELF'])."/wizard"; ?>" method="post"><p class="p_center"><input type="submit" name="go_wizard" value="<?php echo __('WELCOME_WIZARD'); ?>"></p></form>
 <?php } else { ?>
